--- a/.github/workflows/publish_distros_schedule.yaml
+++ b/.github/workflows/publish_distros_schedule.yaml
@@ -2,7 +2,7 @@ name: Scheduled publish all distros
 
 on:
   schedule:
-    - cron: '0 3 * * *'
+    - cron: '0 3 * * *' # At 05:00.
   workflow_dispatch:
     inputs:
       reason:
