--- a/.github/workflows/publish_distros_schedule.yaml
+++ b/.github/workflows/publish_distros_schedule.yaml
@@ -40,7 +40,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Download distro & create manifest
-        id: analysis
+        id: download_distro
         uses: nick-fields/retry@v3
         with:
           timeout_minutes: 10
@@ -53,6 +53,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Create GitHub Release
+        id: publish_release
         uses: softprops/action-gh-release@v2
         if: env.SKIP_PUBLISH != 'true' && env.BITRIX_SM_VERSION != '' && env.BITRIX_SM_VERSION != 'null'
         with:
@@ -73,8 +74,9 @@ jobs:
             ${{ env.BITRIX_OUTPUT_DIR }}/*
 
       - name: Send Telegram Notification
-        if: success() && env.SKIP_PUBLISH != 'true' && inputs.notify_telegram != 'false'
+        id: telegram_notification
         uses: jiacai2050/telegram-action@v1
+        if: success() && env.SKIP_PUBLISH != 'true' && inputs.notify_telegram != 'false'
         with:
           token: ${{ secrets.TELEGRAM_BOT_TOKEN }}
           chat-id: ${{ secrets.TELEGRAM_CHAT_ID }}
@@ -97,8 +99,9 @@ jobs:
           BITRIX_SM_VERSION_DATE: ${{ env.BITRIX_SM_VERSION_DATE }}
 
       - name: Send Telegram Alert
-        if: failure() && inputs.notify_telegram != 'false'
+        id: telegram_alert
         uses: jiacai2050/telegram-action@v1
+        if: failure() && inputs.notify_telegram != 'false'
         with:
           token: ${{ secrets.TELEGRAM_BOT_TOKEN }}
           chat-id: ${{ secrets.TELEGRAM_CHAT_ID }}
