--- a/.github/workflows/publish_scripts_schedule.yaml
+++ b/.github/workflows/publish_scripts_schedule.yaml
@@ -58,7 +58,7 @@ jobs:
           body: |
             ## 📦 Информация о релизе
 
-            Данный релиз содержит оригинальный скрипт `${{ matrix.script_name }}` 1C-Bitrix,
+            Данный релиз содержит оригинальный скрипт `${{ matrix.script_name }}`,
             который был загружен с официального сайта 1С-Битрикс.
 
             Дополнительную информацию по текущему релизу можно посмотреть в файле `manifest.json`.
