--- a/.github/workflows/publish_distros_schedule.yaml
+++ b/.github/workflows/publish_distros_schedule.yaml
@@ -20,7 +20,7 @@ concurrency:
 
 jobs:
   publish_distro:
-    name: Sync ${{ matrix.distro }}
+    name: Publish ${{ matrix.distro }}
     runs-on: ubuntu-latest
     permissions:
       contents: write
