--- a/.github/workflows/publish_distro_manual.yaml
+++ b/.github/workflows/publish_distro_manual.yaml
@@ -1,62 +1,55 @@
-name: Scheduled Distros Publish (all)
+name: Manual Distro Publish
 
 on:
-  schedule:
-    - cron: '0 3 * * *' # 03:00 UTC
   workflow_dispatch:
     inputs:
-      reason:
-        description: 'Reason for manual trigger'
-        required: false
-        default: 'Manual maintenance'
+      distro:
+        description: 'Choose a distro to publish'
+        type: choice
+        required: true
+        options:
+          - start
+          - standard
+          - bitrix24
+          - bitrix24_shop
+          - bitrix24_enterprise
+          - small_business
+          - business
+          - business_cluster
+          - business_cluster_postgresql
       notify_telegram:
         description: 'Send Telegram notifications'
         type: boolean
         default: true
 
 concurrency:
-  group: ${{ github.workflow }}-${{ github.ref }}
+  group: ${{ github.workflow }}-${{ github.event.inputs.distro }}
   cancel-in-progress: true
 
 jobs:
   publish_distro:
-    name: Publish ${{ matrix.distro }}
+    name: Publish ${{ github.event.inputs.distro }}
     runs-on: ubuntu-latest
     permissions:
       contents: write
       id-token: write
 
-    strategy:
-      fail-fast: false
-      matrix:
-        distro: [
-          start,
-          standard,
-          bitrix24,
-          bitrix24_shop,
-          bitrix24_enterprise,
-          small_business,
-          business,
-          business_cluster,
-          business_cluster_postgresql
-        ]
-
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0 # Важно для корректной работы с тегами
+          fetch-depth: 0
 
       - name: Download distro & create manifest
         id: download_distro
         uses: nick-fields/retry@v3
         with:
-          timeout_minutes: 30
-          max_attempts: 3
+          timeout_minutes: 25
+          max_attempts: 5
           retry_on: error
           command: |
             chmod +x ./bin/download-distro.sh
-            ./bin/download-distro.sh ${{ matrix.distro }}
+            ./bin/download-distro.sh ${{ github.event.inputs.distro }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
@@ -66,25 +59,25 @@ jobs:
         if: env.SKIP_PUBLISH != 'true' && env.BITRIX_SM_VERSION != ''
         with:
           tag_name: ${{ env.BITRIX_RELEASE_TAG }}
-          name: "${{ matrix.distro }} v${{ env.BITRIX_SM_VERSION }}"
+          name: "${{ github.event.inputs.distro }} v${{ env.BITRIX_SM_VERSION }}"
           body: |
             ## 📦 Release Info / Информация о релизе
 
             ### English
-            This release contains original 1C-Bitrix archives for the edition `${{ matrix.distro }}`.
+            This release contains original 1C-Bitrix archives for the edition `${{ github.event.inputs.distro }}`.
             Downloaded from official Bitrix servers.
 
             - **Kernel (main) version:** `${{ env.BITRIX_SM_VERSION }}`
             - **Kernel release date:** `${{ env.BITRIX_SM_VERSION_DATE }}`
-            - **Edition (distro):** `${{ matrix.distro }}`
+            - **Edition (distro):** `${{ github.event.inputs.distro }}`
 
             ### Русский
-            Данный релиз содержит оригинальные архивы для редакции `${{ matrix.distro }}` 1C-Битрикс.
+            Данный релиз содержит оригинальные архивы для редакции `${{ github.event.inputs.distro }}` 1C-Битрикс.
             Загружено с официальных серверов Битрикс.
 
             - **Версия ядра (main):** `${{ env.BITRIX_SM_VERSION }}`
             - **Дата выпуска ядра:** `${{ env.BITRIX_SM_VERSION_DATE }}`
-            - **Редакция (дистрибутив):** `${{ matrix.distro }}`
+            - **Редакция (дистрибутив):** `${{ github.event.inputs.distro }}`
 
             ---
             *Check `manifest.json` for file checksums & module versions.*
@@ -97,7 +90,7 @@ jobs:
         if: |
           success() &&
           env.SKIP_PUBLISH != 'true' &&
-          (github.event.inputs.notify_telegram == 'true' || github.event_name == 'schedule' || github.event.inputs.notify_telegram == null)
+          github.event.inputs.notify_telegram == 'true'
         uses: jiacai2050/telegram-action@v1
         with:
           token: ${{ secrets.TELEGRAM_BOT_TOKEN }}
@@ -106,18 +99,18 @@ jobs:
           message: |
             🚀 <b>New Bitrix Release!</b>
 
-            📦 <b>Distro:</b> <code>${{ matrix.distro }}</code>
+            📦 <b>Distro:</b> <code>${{ github.event.inputs.distro }}</code>
             🏷 <b>Kernel (main) version:</b> <code>${{ env.BITRIX_SM_VERSION }}</code>
             📅 <b>Kernel release date:</b> <code>${{ env.BITRIX_SM_VERSION_DATE }}</code>
 
             🔗 <a href="https://github.com/${{ github.repository }}/releases/tag/${{ env.BITRIX_RELEASE_TAG }}">View on GitHub</a>
 
-            #github #bitrix #release #distro #${{ matrix.distro }}
+            #github #bitrix #release #distro #${{ github.event.inputs.distro }}
 
       - name: Send Telegram Alert on Failure
         if: |
           failure() &&
-          (github.event.inputs.notify_telegram == 'true' || github.event_name == 'schedule' || github.event.inputs.notify_telegram == null)
+          github.event.inputs.notify_telegram == 'true'
         uses: jiacai2050/telegram-action@v1
         with:
           token: ${{ secrets.TELEGRAM_BOT_TOKEN }}
@@ -126,8 +119,8 @@ jobs:
           message: |
             🚨 <b>Failed to publish distro!</b>
 
-            📦 Distro: <code>${{ matrix.distro }}</code>
+            📦 Distro: <code>${{ github.event.inputs.distro }}</code>
 
             🔗 <a href="https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}">Check Logs</a>
 
-            #github #bitrix #alert #distro #${{ matrix.distro }}
+            #github #bitrix #alert #distro #${{ github.event.inputs.distro }}
