build: migrate telegram notifications to `crasivo/telegram-action`

--- a/.github/workflows/publish_distro_manual.yaml
+++ b/.github/workflows/publish_distro_manual.yaml
@@ -98,12 +98,12 @@ jobs:
           env.SKIP_PUBLISH != 'true' &&
           github.event.inputs.notify_telegram == 'true' &&
           github.event.inputs.is_prerelease == false
-        uses: jiacai2050/telegram-action@v1
+        uses: crasivo/telegram-action@v1
         with:
-          token: ${{ secrets.TELEGRAM_BOT_TOKEN }}
-          chat-id: ${{ secrets.TELEGRAM_CHAT_ID }}
-          parse-mode: html
-          message: |
+          bot_token: ${{ secrets.TELEGRAM_BOT_TOKEN }}
+          chat_id: ${{ secrets.TELEGRAM_CHAT_ID }}
+          parse_mode: HTML
+          message_text: |
             🚀 <b>New Bitrix Release!</b>
 
             📦 <b>Distro:</b> <code>${{ github.event.inputs.distro }}</code>
